<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/txt_showQuestionNum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:textSize="30sp"
        android:text="@string/q"/>
    <!--  question Label -->
    <TextView android:id="@+id/txt_showQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/calc"/>
    <!--  answer Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:textSize="30sp"
        android:text="@string/answer"/>
    <EditText android:id="@+id/txt_Answer1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"/>
    <EditText android:id="@+id/txt_Answer2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip" />
    <!--answer correct show label-->
    <TextView
        android:id="@+id/txt_showAnswer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:textSize="30sp"
        android:text="@string/if_correct"/>
    <!-- Submit button -->
    <Button android:id="@+id/btn_Submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/submit"/>
    <Button android:id="@+id/btn_Next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/next"/>
    <Spinner
        android:id="@+id/spinner_roundAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:spinnerMode="dialog"
        android:prompt="@string/round_answer">
    </Spinner>
</LinearLayout>
